# universal_equation

./: AMOURANTH RTX.txt  CMakeLists.txt  LICENSE  Makefile  README.md  all.sh  depends.sh  lang  linux.sh  main.cpp  main.hpp  mingw-toolchain.cmake  nvidia_icd.json  toolchain-mingw64.cmake  toolchain.sh  toolchain_part1.sh  universal_equation.hpp  windows.sh
hearer/: Makefile  Readme  shower_hearer  shower_hearer.cpp  universal_equation.hpp
include/: Mia.hpp  PushConstants.hpp  SDL3_fps_counter.hpp  SDL3_init.hpp  VulkanBufferManager.hpp  VulkanCore.hpp  Vulkan_RTX.cpp  Vulkan_RTX.hpp  Vulkan_func.hpp  Vulkan_init.hpp  core.hpp  font.hpp  handle_app.hpp  handleinput.hpp  main.hpp  modes.hpp  modes_ue.hpp  types.hpp  types_ue.hpp  ue_init.hpp  universal_equation.hpp
include/engine/: SDL3_Console.hpp  SDL3_init.hpp  SDL3_input.hpp  SDL3_vulkan.hpp  SDL3_window.hpp  Vulkan_RTX.hpp  Vulkan_RTX_init.hpp  Vulkan_func.hpp  Vulkan_func_pipe.hpp  Vulkan_func_swapchain.hpp  Vulkan_init.hpp  Vulkan_init_buffers.hpp  Vulkan_init_pipeline.hpp  Vulkan_init_swapchain.hpp  Vulkan_types.hpp  Vulkan_utils.hpp  application.hpp  core.hpp  logging.hpp
include/engine/SDL3/: SDL3_Console.hpp  SDL3_audio.hpp  SDL3_font.hpp  SDL3_image.hpp  SDL3_input.hpp  SDL3_vulkan.hpp  SDL3_window.hpp
include/engine/Vulkan/: Vulkan_RTX.hpp  Vulkan_func.hpp  Vulkan_func_pipe.hpp  Vulkan_func_swapchain.hpp  Vulkan_types.hpp  logging.hpp
scripts/: mingw64-cross.ini  mingw64-toolchain.cmake  toolchain.sh  toolchain_part1.sh  toolchain_part2.sh
shaders/: anyhit.rahit  callable.rcall  closesthit.rchit  common.glsl  fragment.frag  intersection.rint  miss.rmiss  quad.frag  quad.vert  raygen.rgen  shadow.vert  universal_equation.compute  vertex.vert
shaders/compute/: xorshift.comp
shaders/rasterization/: fragment.frag  vertex.vert
shaders/raytracing/: anyhit.rahit  callable.rcall  closesthit.rchit  miss.rmiss  raygen.rgen
src/: VulkanBufferManager.cpp  VulkanCore.cpp  Vulkan_RTX.cpp  Vulkan_func.cpp  Vulkan_init.cpp  core.cpp  font.cpp  handle_app.cpp  handleinput.cpp  main.cpp  mode1.cpp  mode2.cpp  mode3.cpp  mode4.cpp  mode5.cpp  mode6.cpp  mode7.cpp  mode8.cpp  mode9.cpp  ue_init.cpp  universal_equation.cpp  universal_equation_AMOURANTH.cpp  universal_equation_physical.cpp  universal_equation_quantum.cpp
src/engine/: SDL3_Console.cpp  SDL3_audio.cpp  SDL3_init.cpp  SDL3_input.cpp  SDL3_vulkan.cpp  SDL3_window.cpp  Vulkan_RTX.cpp  Vulkan_RTX_init.cpp  Vulkan_func.cpp  Vulkan_func_pipe.cpp  Vulkan_func_swapchain.cpp  Vulkan_init.cpp  Vulkan_init_buffers.cpp  Vulkan_init_pipeline.cpp  Vulkan_init_swapchain.cpp  Vulkan_utils.cpp  core.cpp
src/engine/SDL3/: SDL3_Console.cpp  SDL3_audio.cpp  SDL3_image.cpp  SDL3_input.cpp  SDL3_vulkan.cpp  SDL3_window.cpp
src/engine/Vulkan/: VulkanRTX_Acceleration.cpp  VulkanRTX_Render.cpp  VulkanRTX_Setup.cpp  VulkanRTX_utility.cpp  Vulkan_RTX.cpp  Vulkan_func.cpp  Vulkan_func_pipe.cpp  Vulkan_func_swapchain.cpp
src/modes/: mode1.cpp  mode2.cpp  mode3.cpp  mode4.cpp  mode5.cpp  mode6.cpp  mode7.cpp  mode8.cpp  mode9.cpp
src/src/: mode1.cpp  mode2.cpp  mode4.cpp  mode6.cpp  mode9.cpp
